
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 16 (2006-XX-XX):
[NOT YET FINALIZED, THIS IS BETA VERSION]

- Improved ROM detection in the list and file selection
dialog (now directly based upon Gngeo's scaning results:
faster and more accurate!).
- ROM list now supports multiple ROM directories.
- New integrated ROM driver editor (IN PROGRESS).
- New hot keys configuration support, for the 2 players.
- You can now see a ROM preview image (if activated) when
loading using the file selection dialog.
- New options support: `68kclock', `bench', `hwsurface',
`transpack', `z80clock', `sleepidle'.
- Visual indication of unavaible ROM and ability to remove
entries in the History menu.
- Added possibility to select the new Universal BIOS.
- Added comments and general layout preservative writting
method for the `gngeorc' file.
- Better guessing of the default path to Gngeo's `romrc' file.
- Added possibility to choose XGngeo window to be centered on
the screen on start.
- Bugfix: no more problem in the Rom list with some PyGTK ins-
tallations. 
- Various GUI enhancements.
- Added checking for the PyGTK version (must be 2.6 or more).
- Minimum accepted Gngeo version setted to 0.6.11 (current :p).
- System-wide installation (using distutil) & per-user XGngeo
configuration.
- New German translation by Peter Kainrad.


* Changes in version 15 (2005-07-14):

- Big configuration panels reorganization with now 3 different
windows: ``Important paths" (which contains the required
parameters that have to be valid for a correct emultation),
``Global emulation" (which contains Neo Geo default emulation
options for all Roms) and ``Other things" (which mostly
contains XGngeo-specific parameters).
- Improvements on the Rom list window which now features, for
the first time in a Gngeo frontend ever, the possibility to set
Rom-specific emulation options! ^___^";
- Added a new ``Joystick" section, merged with the ``Audio"